2014-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Conditionally comment out Conditionally unused variable.
 tools/pqxx-fulltest:
 - Only care about postgres versions 8 and up.
2013-08-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Prefer <memory> over <tr1/memory>
 - Fixes #266.  Thanks Wichert Akkerman.
2013-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/splitconfig:
 - Rewrote in python.
 - Much shorter: most of the code was detecting & handling grep flavours!
 - Should fix BSD build problem.  Thanks Martin van den Nieuwelaar.
2013-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, src/binarystring.cxx:
 - C++11 fix: instantiate on non-const unsigned char.  Thanks Linus Kallberg.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
 - Updated documentation for isolation levels.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
 - Support for REPEATABLE READ isolation level.  Thanks pawsa.
 - Fixes #259.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/mingw.mak.template:
 - Build fix for MinGW: LIBPQPATH, not LIBPATH.  Thanks Maxwell (?)
 - Fixes #261.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx, test/unit/test_string_conversion.cxx:
 - Some integer overflows in from_string were not detected.
 - Fixes #263.
2013-01-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Fix w clang++ 3.0: basic C-library test broke.
2012-08-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx:
 - Compile fix for clang++ 3.2.  Thanks Amy Troschinetz.
 - Fixes #253.
2012-08-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Compile fix for clang++ 3.2.  Thanks Amy Troschinetz.
 - Fixes #252.
2012-04-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, debian, Makefile.am, tools/lint, tools/release:
 - Removed obsolete debian and RPM packaging.